--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.0-alpha.12",
     "@ai-sdk/react": "^2.0.0-alpha.12",
+    "@auth/core": "^0.40.0",
     "@convex-dev/auth": "^0.0.87",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-dialog": "^1.1.14",
